# HydroBOT

./: .Rbuildignore  .Renviron  .Rprofile  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  DESCRIPTION  HydroBOT.Rproj  HydroBOT.qmd  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  WERP_toolkit.qmd  _environment  _pkgdown.yml  _quarto.yaml.local  _quarto.yml  authors.html  developer.html  developer.md  index.html  pkgdown.yml  pyproject.toml  python_test_script.py  search.json  sitemap.xml
R/: HydroBOT-package.R  STYLER_TEST.R  adjust_zeros.R  aggregation_helpers.R  as_colors.R  baseline_compare.R  causal_colors_general.R  clean_ewr_causal.R  clean_ewr_obj.R  clean_long_term.R  clean_obj_target.R  data.R  default_agg_funs.R  default_comparison_funs.R  directory_setup.R  extract_vals_causal.R  find_related_nodes.R  functionlister.R  gauge2geo.R  gauge_pu.R  general_aggregate.R  get_ewr_info.R  get_ewr_output.R  get_module_output.R  grouped_colours.R  join_to_geo.R  make_causal_plot.R  make_edges.R  make_nodes.R  make_pal.R  make_plot_table.R  multi_aggregate.R  node_plot_atts.R  param_runner.R  parse_colors.R  plot_bar.R  plot_helpers.R  plot_hydrographs.R  plot_outcomes.R  plot_prep.R  (+21 more)
Rfuns/: spatial_helpers.R
_test_data/: params.R
aggregator/: spatial_agg.qmd  theme_agg.qmd  theme_space_agg.qmd
causal_networks/: causal_plots.qmd
controller/: controller_demo.qmd  controller_functions.py
data/: basin.dbf  basin.rda  basin_rivers.rda  bom_basin_gauges.rda  bom_gauges.dbf  bom_gauges.shp  bom_gauges.shx  (+10 more)
(+569 files in other folders)
